@@ -2074,7 +2074,7 @@ static inline void getNPRect(const NSRect& nr, NPRect& npr)
             break;
         }
         case NPNURLVProxy: {
-#ifndef BUILDING_ON_TIGER
+#if !defined(BUILDING_ON_TIGER) && !defined(BUILDING_ON_LEOPARD)
             if (!value)
                 break;
             
