@@ -1,5 +1,14 @@
 2009-04-07  Anders Carlsson  <andersca@apple.com>
 
+        Try to fix the Leopard build once more.
+        
+        * Plugins/WebBaseNetscapePluginView.h:
+        * Plugins/WebBaseNetscapePluginView.mm:
+        * Plugins/WebNetscapePluginView.mm:
+        (-[WebNetscapePluginView getVariable:forURL:value:length:]):
+
+2009-04-07  Anders Carlsson  <andersca@apple.com>
+
         ...and try to fix the Leopard build.
         
         * Plugins/npapi.mm:
