@@ -1,5 +1,11 @@
 2009-04-07  Anders Carlsson  <andersca@apple.com>
 
+        Try to fix the Leopard build once more.
+
+        * WebKit.xcodeproj/project.pbxproj:
+
+2009-04-07  Anders Carlsson  <andersca@apple.com>
+
         Another attempt at fixing the build.
         
         * WebKit.xcodeproj/project.pbxproj:
